...
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/enterEmail"
...
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/enterPassword"
...
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_button_light"
            android:textColor="#fff"
            android:text="@string/login"
...
