<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHomeFragment"
    android:id="@+id/constraintLayout"
    android:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="32dp"
        android:background="?android:windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adminPanel"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="32dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userManagement">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <!--BUTTON 1-->

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginBottom="10dp">

                    <ImageButton
                        android:id="@+id/manageClassesButton"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/red_button_background" />

                    <TextView
                        android:id="@+id/classesText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/manageClasses"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/classesIcon"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center|right"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="12dp"
                        android:rotation="20"
                        android:src="@drawable/outline_book_24" />
                </FrameLayout>

                <!--BUTTON 2-->

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginBottom="10dp">


                    <ImageButton
                        android:id="@+id/manageUsersButton"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/yellow_button_background"/>

                    <TextView
                        android:id="@+id/teachersText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/manageUsers"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/teachersIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center|right"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="12dp"
                        android:rotation="20"
                        android:src="@drawable/outline_history_edu_24" />
                </FrameLayout>

                <!--BUTTON 1-->

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginBottom="10dp">

                    <ImageButton
                        android:id="@+id/manageGroupsButton"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/blue_button_background" />

                    <TextView
                        android:id="@+id/classesText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/manageGroups"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/classesIcon"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center|right"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="12dp"
                        android:rotation="20"
                        android:src="@drawable/baseline_groups_24" />
                </FrameLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
